# Vision-Based-Page-Rank-Estimation

./: .gitignore  LICENSE  README.md
cef-experiments/: .gitignore
cef-experiments/dependencies/Resources/: cef_100_percent.pak  cef_extensions.pak
cef-experiments/experiment-project/: CMakeLists.txt
cef-experiments/experiment-project/experiment-source/: CMakeLists.txt  experiment_handler.h  experiment_main.cc
datacrawler/: .gitignore
datacrawler-run/: run.py
datacrawler-run/datacrawler-chart/: Chart.yaml  values.yaml
datacrawler-run/datacrawler-chart/templates/: datacrawler-output.yaml  datacrawler-redis-filler.yaml  datacrawler.yaml
datacrawler-run/datacrawler-redis-filler/: Dockerfile  oldtop100000.csv  redis_bulk_data.sh
datacrawler/datacrawler-charts/datacrawler-image/: Dockerfile  run_datacrawler.sh  worker.py
datacrawler/datacrawler-charts/datacrawler-redis-filler/: Dockerfile  push_urls.sh  redis_bulk_data.sh  rest.csv  top100000_redis.csv
datacrawler/datacrawler-project/: CMakeLists.txt
datacrawler/datacrawler-project/Docker/: Dockerfile  run_datacrawler.sh  worker.py
datacrawler/datacrawler-project/datacrawler-source/: CMakeLists.txt  DataModulesEnum.h  DatacrawlerApp.cpp  DatacrawlerApp.h  DatacrawlerConfiguration.cpp  DatacrawlerConfiguration.h  DatacrawlerRenderProcessHandler.cpp  DatacrawlerRenderProcessHandler.h  GraphOutput.cpp  GraphOutput.h  datacrawler.config.json  datacrawler.cpp  datacrawler.h  datacrawler_client.cpp  datacrawler_client.h  datacrawler_handler.cpp  datacrawler_handler.h  datacrawler_main.cpp  experiment_client.cpp  experiment_client.h  experiment_handler.cpp  experiment_handler.h  experiment_main.cpp
datacrawler/datacrawler-project/datacrawler-source/datamodule-configs/: DataModuleBaseConfiguration.cpp  DataModuleBaseConfiguration.h  ScreenshotConfiguration.cpp  ScreenshotConfiguration.h  UrlConfiguration.cpp  UrlConfiguration.h
datacrawler/datacrawler-project/datacrawler-source/datamodules/: DataBase.cpp  DataBase.h  DataModuleBase.cpp  DataModuleBase.h  ScreenshotDataModule.cpp  ScreenshotDataModule.h
datacrawler/datacrawler-project/datacrawler-source/datamodules/screenshot-datamodule/: Screenshot.cpp  Screenshot.h  ScreenshotClient.cpp  ScreenshotClient.h  ScreenshotData.cpp  ScreenshotData.h  ScreenshotDataModule.cpp  ScreenshotDataModule.h  ScreenshotHandler.cpp  ScreenshotHandler.h  ScreenshotLoadhandler.cpp  ScreenshotLoadhandler.h  ScreenshotRequestHandler.cpp  ScreenshotRequestHandler.h
datacrawler/datacrawler-project/datacrawler-source/datamodules/url-datamodule/: Url.cpp  Url.h  UrlClient.cpp  UrlClient.h  UrlCollection.cpp  UrlCollection.h  UrlDOMVisitor.cpp  UrlDOMVisitor.h  UrlDataModule.cpp  UrlDataModule.h  UrlDisplayHandler.cpp  UrlDisplayHandler.h  UrlLoadHandler.cpp  UrlLoadHandler.h  UrlRenderHandler.cpp  UrlRenderHandler.h  UrlRenderProcessHandler.cpp  UrlRenderProcessHandler.h  UrlRequestHandler.cpp  UrlRequestHandler.h  UrlResponseFilter.cpp  UrlResponseFilter.h
datacrawler/datacrawler-project/datacrawler-source/graph/: NodeElement.cpp  NodeElement.h
datacrawler/datacrawler-project/datacrawler-source/util/: LogLevel.h  Logger.cpp  Logger.h  json.hpp
datacrawler/dependencies/: README.md
dataset_publication_website/: index.html
docs/: data.html  ml-structure.md
docs/article/: .gitignore  article.tex  bibliography.bib  config.tex  datacrawler.tex  datasets.tex  listings.tex  math_commands.tex
graph_nets/: .gitignore  setup.py
graph_nets/graph_nets/: __init__.py  block.py  test_block.py  test_block_module.py  test_utils.py  utils.py
human_eval/: .gitignore  README.md  env.sample  package-lock.json  package.json
human_eval/backend/: package-lock.json  package.json
human_eval/src/: server.js
human_eval/ui/: api.js  index.html  main.js  mainv1.js  mainv2.js  pubsub.js  storage.js  ui.js  v1.html
rank_predictor/: .gitignore  README.md  requirements.txt  setup.py
rank_predictor/rank_predictor/: __main__.py
(+163 files in other folders)
